# training_rag

./: .env  chonkie.html  pyproject.toml  requirements.txt  sample csv.csv  training.ipynb  training.py  tutorial rag.ipynb
db/: workshop_db
db/workshop_1/: chroma.sqlite3
db/workshops_1/: chroma.sqlite3
