[project]
name = "rag-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie[chroma,hub,openai,viz]>=1.0.8",
    "duckdb>=1.3.0",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.115.9",
    "ipykernel>=7.1.0",
    "langfuse>=2.60.6",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-text-splitters >= 1.0.0",
    "markitdown[all]>=0.1.1",
    "numpy>=1.24.0",
    "openai>=1.82.0",
    "google-genai>=1.47.0",
    "google-generativeai>=0.8.5",
    "pip>=25.1.1",
    "presidio-analyzer>=2.2.358",
    "presidio-anonymizer>=2.2.358",
    "pydantic>=2.11.5",
    "pypdf>=6.3.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "redis>=6.1.0",
    "spacy>=3.8.7",
    "uvicorn[standard]>=0.34.2",
]
